refactor(project):
- 移除 lrpc-spring 模块，将其功能整合到 lrpc-spring-boot-starter 中
-重新组织包结构，提高代码可维护性
- 添加 application.properties配置示例
- 更新 README 文档，增加项目说明和使用方式
- 重构部分类名和注解，以适应 Spring Boot 集成